--- a/people.html
+++ b/people.html
@@ -45,22 +45,23 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            gap: 20px;
+            gap: 15px;
         }
         .author {
             text-align: center;
-            width: calc(25% - 15px);
-            margin-bottom: 30px;
+            width: calc(20% - 12px);
+            margin-bottom: 20px;
         }
         .author-image {
-            width: 120px;
-            height: 120px;
+            width: 100px;
+            height: 100px;
             border-radius: 50%;
             object-fit: cover;
             margin-bottom: 10px;
         }
         .author-name {
-            margin-top: 10px;
+            margin-top: 5px;
+            font-size: 14px;
         }
         .author-name a {
             color: #333;
@@ -70,14 +71,19 @@
         .author-name a:hover {
             text-decoration: underline;
         }
-        @media (max-width: 1024px) {
+        @media (max-width: 1200px) {
             .author {
-                width: calc(33.33% - 13.33px);
+                width: calc(25% - 11.25px);
+            }
+        }
+        @media (max-width: 992px) {
+            .author {
+                width: calc(33.33% - 10px);
             }
         }
         @media (max-width: 768px) {
             .author {
-                width: calc(50% - 10px);
+                width: calc(50% - 7.5px);
             }
         }
         @media (max-width: 480px) {
@@ -106,43 +112,43 @@
     <br>
     <div class="authors-grid">
         <div class="author">
-            <img src="https://via.placeholder.com/120" alt="Aiwei Liu" class="author-image">
+            <img src="https://via.placeholder.com/100" alt="Aiwei Liu" class="author-image">
             <div class="author-name"><a href="#">Aiwei Liu</a></div>
         </div>
         <div class="author">
-            <img src="https://via.placeholder.com/120" alt="Leyi Pan" class="author-image">
+            <img src="https://via.placeholder.com/100" alt="Leyi Pan" class="author-image">
             <div class="author-name"><a href="#">Leyi Pan</a></div>
         </div>
         <div class="author">
-            <img src="https://via.placeholder.com/120" alt="Yijian Lu" class="author-image">
+            <img src="https://via.placeholder.com/100" alt="Yijian Lu" class="author-image">
             <div class="author-name"><a href="#">Yijian Lu</a></div>
         </div>
         <div class="author">
-            <img src="https://via.placeholder.com/120" alt="Jingjing Li" class="author-image">
+            <img src="https://via.placeholder.com/100" alt="Jingjing Li" class="author-image">
             <div class="author-name"><a href="#">Jingjing Li</a></div>
         </div>
         <div class="author">
-            <img src="https://via.placeholder.com/120" alt="Xuming Hu" class="author-image">
+            <img src="https://via.placeholder.com/100" alt="Xuming Hu" class="author-image">
             <div class="author-name"><a href="#">Xuming Hu</a></div>
         </div>
         <div class="author">
-            <img src="https://via.placeholder.com/120" alt="Xi Zhang" class="author-image">
+            <img src="https://via.placeholder.com/100" alt="Xi Zhang" class="author-image">
             <div class="author-name"><a href="#">Xi Zhang</a></div>
         </div>
         <div class="author">
-            <img src="https://via.placeholder.com/120" alt="Lijie Wen" class="author-image">
+            <img src="https://via.placeholder.com/100" alt="Lijie Wen" class="author-image">
             <div class="author-name"><a href="#">Lijie Wen</a></div>
         </div>
         <div class="author">
-            <img src="https://via.placeholder.com/120" alt="Irwin King" class="author-image">
+            <img src="https://via.placeholder.com/100" alt="Irwin King" class="author-image">
             <div class="author-name"><a href="#">Irwin King</a></div>
         </div>
         <div class="author">
-            <img src="https://via.placeholder.com/120" alt="Hui Xiong" class="author-image">
+            <img src="https://via.placeholder.com/100" alt="Hui Xiong" class="author-image">
             <div class="author-name"><a href="#">Hui Xiong</a></div>
         </div>
         <div class="author">
-            <img src="https://via.placeholder.com/120" alt="Philip S. Yu" class="author-image">
+            <img src="https://via.placeholder.com/100" alt="Philip S. Yu" class="author-image">
             <div class="author-name"><a href="#">Philip S. Yu</a></div>
         </div>
     </div>
