--- a/materials.html
+++ b/materials.html
@@ -141,7 +141,7 @@
         </ul>
     </div>
     
-    <h3>Watermarking for LLMs (Sec.4)</h3>
+    <h3>Watermarking for LLMs</h3>
     <div class="section-content">
         <h4>Watermarking during Logits Generation</h4>
         <ul>
@@ -189,16 +189,24 @@
     <h3>Watermark Attacks</h3>
     <div class="section-content">
         <ul>
-            <li><a href="#">Katzenbeisser, S., & Petitcolas, F. A. (2000). Information hiding techniques for steganography and digital watermarking.</a></li>
-            <li><a href="#">Cox, I. J., Miller, M. L., Bloom, J. A., Fridrich, J., & Kalker, T. (2007). Digital watermarking and steganography.</a></li>
+            <li><a href="https://arxiv.org/pdf/2402.14007">Can watermarks survive translation? on the cross-lingual consistency of text watermark for large language models.</a></li>
+            <li><a href="https://arxiv.org/pdf/2403.10020">Lost in Overlap: Exploring Watermark Collision in LLMs.</a></li>
+            <li><a href="https://arxiv.org/pdf/2303.11156">Can AI-Generated Text be Reliably Detected?</a></li>
+            <li><a href="https://arxiv.org/pdf/2403.14719">Bypassing LLM Watermarks with Color-Aware Substitutions.</a></li>
+            <li><a href="https://arxiv.org/pdf/2405.19677">Large Language Model Watermark Stealing With Mixed Integer Programming.</a></li>
+            <li><a href="https://arxiv.org/pdf/2402.19361">Watermark stealing in large language models.</a></li>
+            <li><a href="https://arxiv.org/pdf/2311.04378">Watermarks in the Sand: Impossibility of Strong Watermarking for Generative Models.</a></li>
+            <li><a href="https://arxiv.org/pdf/2312.04469">On the Learnability of Watermarks for Language Models.</a></li>
         </ul>
     </div>
 
     <h3>Benchmarks and Tools</h3>
     <div class="section-content">
         <ul>
-            <li><a href="#">Katzenbeisser, S., & Petitcolas, F. A. (2000). Information hiding techniques for steganography and digital watermarking.</a></li>
-            <li><a href="#">Cox, I. J., Miller, M. L., Bloom, J. A., Fridrich, J., & Kalker, T. (2007). Digital watermarking and steganography.</a></li>
+            <li><a href="https://arxiv.org/pdf/2311.07138">WaterBench: Towards Holistic Evaluation of Watermarks for Large Language Models.</a></li>
+            <li><a href="https://arxiv.org/pdf/2403.19548">WaterJudge: Quality-Detection Trade-off when Watermarking Large Language Models.</a></li>
+            <li><a href="https://arxiv.org/pdf/2312.00273">Mark My Words: Analyzing and Evaluating Language Model Watermarks.</a></li>
+            <li><a href="https://arxiv.org/pdf/2405.10051">MarkLLM: An Open-Source Toolkit for LLM Watermarking.</a></li>
         </ul>
     </div>
         
