--- a/people.html
+++ b/people.html
@@ -112,43 +112,43 @@
     <br>
     <div class="authors-grid">
         <div class="author">
-            <img src="https://via.placeholder.com/100" alt="Aiwei Liu" class="author-image">
+            <img src="images/aiwei.jpg" alt="Aiwei Liu" class="author-image">
             <div class="author-name"><a href="#">Aiwei Liu</a></div>
         </div>
         <div class="author">
-            <img src="https://via.placeholder.com/100" alt="Leyi Pan" class="author-image">
+            <img src="images/leyi.jpg" alt="Leyi Pan" class="author-image">
             <div class="author-name"><a href="#">Leyi Pan</a></div>
         </div>
         <div class="author">
-            <img src="https://via.placeholder.com/100" alt="Yijian Lu" class="author-image">
+            <img src="images/lucas.jpg" alt="Yijian Lu" class="author-image">
             <div class="author-name"><a href="#">Yijian Lu</a></div>
         </div>
         <div class="author">
-            <img src="https://via.placeholder.com/100" alt="Jingjing Li" class="author-image">
+            <img src="images/jingjing.jpg" alt="Jingjing Li" class="author-image">
             <div class="author-name"><a href="#">Jingjing Li</a></div>
         </div>
         <div class="author">
-            <img src="https://via.placeholder.com/100" alt="Xuming Hu" class="author-image">
+            <img src="images/xuming.jpg" alt="Xuming Hu" class="author-image">
             <div class="author-name"><a href="#">Xuming Hu</a></div>
         </div>
         <div class="author">
-            <img src="https://via.placeholder.com/100" alt="Xi Zhang" class="author-image">
+            <img src="images/xizhang.jpg" alt="Xi Zhang" class="author-image">
             <div class="author-name"><a href="#">Xi Zhang</a></div>
         </div>
         <div class="author">
-            <img src="https://via.placeholder.com/100" alt="Lijie Wen" class="author-image">
+            <img src="images/lijie.jpg" alt="Lijie Wen" class="author-image">
             <div class="author-name"><a href="#">Lijie Wen</a></div>
         </div>
         <div class="author">
-            <img src="https://via.placeholder.com/100" alt="Irwin King" class="author-image">
+            <img src="images/irwin-king.jpg" alt="Irwin King" class="author-image">
             <div class="author-name"><a href="#">Irwin King</a></div>
         </div>
         <div class="author">
-            <img src="https://via.placeholder.com/100" alt="Hui Xiong" class="author-image">
+            <img src="images/hui-xiong.png" alt="Hui Xiong" class="author-image">
             <div class="author-name"><a href="#">Hui Xiong</a></div>
         </div>
         <div class="author">
-            <img src="https://via.placeholder.com/100" alt="Philip S. Yu" class="author-image">
+            <img src="images/psyu.jpg" alt="Philip S. Yu" class="author-image">
             <div class="author-name"><a href="#">Philip S. Yu</a></div>
         </div>
     </div>
