--- a/people.html
+++ b/people.html
@@ -113,43 +113,43 @@
     <div class="authors-grid">
         <div class="author">
             <img src="images/aiwei.jpg" alt="Aiwei Liu" class="author-image">
-            <div class="author-name"><a href="#">Aiwei Liu</a></div>
+            <div class="author-name"><a href="https://exlaw.github.io/">Aiwei Liu</a></div>
         </div>
         <div class="author">
             <img src="images/leyi.jpg" alt="Leyi Pan" class="author-image">
-            <div class="author-name"><a href="#">Leyi Pan</a></div>
+            <div class="author-name"><a href="https://scholar.google.com/citations?user=4b-1Os8AAAAJ&hl=en">Leyi Pan</a></div>
         </div>
         <div class="author">
             <img src="images/lucas.jpg" alt="Yijian Lu" class="author-image">
-            <div class="author-name"><a href="#">Yijian Lu</a></div>
+            <div class="author-name"><a href="https://scholar.google.com/citations?user=PIwcsJQAAAAJ&hl=en">Yijian Lu</a></div>
         </div>
         <div class="author">
             <img src="images/jingjing.jpg" alt="Jingjing Li" class="author-image">
-            <div class="author-name"><a href="#">Jingjing Li</a></div>
+            <div class="author-name"><a href="https://scholar.google.com/citations?user=op6xj6oAAAAJ&hl=en">Jingjing Li</a></div>
         </div>
         <div class="author">
             <img src="images/xuming.jpg" alt="Xuming Hu" class="author-image">
-            <div class="author-name"><a href="#">Xuming Hu</a></div>
+            <div class="author-name"><a href="https://xuminghu.github.io/">Xuming Hu</a></div>
         </div>
         <div class="author">
             <img src="images/xizhang.jpg" alt="Xi Zhang" class="author-image">
-            <div class="author-name"><a href="#">Xi Zhang</a></div>
+            <div class="author-name"><a href="https://scholar.google.com/citations?user=6sRtx0cAAAAJ&hl=en">Xi Zhang</a></div>
         </div>
         <div class="author">
             <img src="images/lijie.jpg" alt="Lijie Wen" class="author-image">
-            <div class="author-name"><a href="#">Lijie Wen</a></div>
+            <div class="author-name"><a href="https://scholar.google.com/citations?user=f3C0jUIAAAAJ&hl=zh-CN">Lijie Wen</a></div>
         </div>
         <div class="author">
             <img src="images/irwin-king.jpg" alt="Irwin King" class="author-image">
-            <div class="author-name"><a href="#">Irwin King</a></div>
+            <div class="author-name"><a href="https://scholar.google.com/citations?user=MXvC7tkAAAAJ&hl=zh-CN">Irwin King</a></div>
         </div>
         <div class="author">
             <img src="images/hui-xiong.png" alt="Hui Xiong" class="author-image">
-            <div class="author-name"><a href="#">Hui Xiong</a></div>
+            <div class="author-name"><a href="https://scholar.google.com/citations?user=cVDF1tkAAAAJ&hl=en">Hui Xiong</a></div>
         </div>
         <div class="author">
             <img src="images/psyu.jpg" alt="Philip S. Yu" class="author-image">
-            <div class="author-name"><a href="#">Philip S. Yu</a></div>
+            <div class="author-name"><a href="https://scholar.google.com/citations?user=D0lL1r0AAAAJ&hl=zh-CN">Philip S. Yu</a></div>
         </div>
     </div>
 </section>
