--- a/materials.html
+++ b/materials.html
@@ -6,61 +6,90 @@
     <title>Materials - Text Watermarking Survey</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 0;
             line-height: 1.6;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            background-color: #f0f4f8;
+            color: #333;
         }
         header {
-            background: #333;
+            background: linear-gradient(135deg, #2c3e50, #34495e);
             color: #fff;
-            padding: 10px 0;
+            padding: 20px 0;
             text-align: center;
+            width: 100%;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         }
         nav {
-            background: #444;
+            background: #34495e;
             color: #fff;
-            padding: 10px;
+            padding: 15px;
             text-align: center;
+            width: 100%;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         }
         nav a {
             color: #fff;
-            margin: 0 10px;
+            margin: 0 15px;
             text-decoration: none;
+            font-weight: bold;
+            transition: color 0.3s ease;
+        }
+        nav a:hover {
+            color: #3498db;
         }
         section {
-            padding: 20px;
-            margin-bottom: 60px;
+            padding: 40px;
+            margin-bottom: 80px;
+            max-width: 1000px;
+            width: 90%;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(0,0,0,0.1);
         }
         footer {
-            background: #333;
+            background: linear-gradient(135deg, #2c3e50, #34495e);
             color: #fff;
             text-align: center;
-            padding: 10px 0;
+            padding: 15px 0;
             position: fixed;
             width: 100%;
             bottom: 0;
+            box-shadow: 0 -2px 5px rgba(0,0,0,0.1);
         }
         .pdf-link {
             display: inline-block;
-            background-color: #000; 
+            background-color: #3498db;
             color: white;
-            padding: 10px 20px;
+            padding: 12px 25px;
             text-decoration: none;
-            border-radius: 5px;
-            margin-top: 20px;
+            border-radius: 25px;
+            margin-top: 30px;
+            transition: background-color 0.3s ease;
+        }
+        .pdf-link:hover {
+            background-color: #2980b9;
         }
         .citation {
-            margin-top: 30px;
-            margin-bottom: 60px;
+            margin-top: 40px;
+            margin-bottom: 80px;
+            position: relative;
+            background-color: #f9f9f9;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.05);
         }
         .citation pre {
-            background: #f4f4f4;
-            border: 1px solid #ddd;
-            border-left: 3px solid #f36d33;
+            background: #fff;
+            border: 1px solid #e0e0e0;
+            border-left: 5px solid #3498db;
             page-break-inside: avoid;
-            font-family: monospace;
-            font-size: 15px;
+            font-family: 'Courier New', Courier, monospace;
+            font-size: 14px;
             line-height: 1.6;
             margin-bottom: 1.6em;
             max-width: 100%;
@@ -71,24 +100,45 @@
         }
         .copy-btn {
             display: inline-block;
-            background-color: #000;
+            background-color: #3498db;
             color: white;
             padding: 10px 20px;
             text-decoration: none;
-            border-radius: 5px;
+            border-radius: 25px;
             margin-top: 10px;
             cursor: pointer;
+            position: absolute;
+            top: 3.5em;
+            right: 1em;
+            opacity: 0;
+            transition: opacity 0.3s, background-color 0.3s ease;
+        }
+        .citation:hover .copy-btn {
+            opacity: 1;
+        }
+        .copy-btn:hover {
+            background-color: #2980b9;
         }
         .section-content {
             margin-left: 20px;
         }
-        /* 新增的链接样式 */
         a {
-            color: #1a73e8;
+            color: #3498db;
             text-decoration: none;
+            transition: color 0.3s ease;
         }
         a:hover {
+            color: #2980b9;
             text-decoration: underline;
+        }
+        h2, h3, h4 {
+            color: #2c3e50;
+        }
+        ul {
+            padding-left: 20px;
+        }
+        li {
+            margin-bottom: 10px;
         }
     </style>
 </head>
