--- a/people.html
+++ b/people.html
@@ -6,84 +6,110 @@
     <title>People - Text Watermarking Survey</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 0;
             line-height: 1.6;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            background-color: #f0f4f8;
+            color: #333;
         }
         header {
-            background: #333;
+            background: linear-gradient(135deg, #2c3e50, #34495e);
             color: #fff;
-            padding: 10px 0;
+            padding: 20px 0;
             text-align: center;
+            width: 100%;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         }
         nav {
-            background: #444;
+            background: #34495e;
             color: #fff;
-            padding: 10px;
+            padding: 15px;
             text-align: center;
+            width: 100%;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         }
         nav a {
             color: #fff;
-            margin: 0 10px;
+            margin: 0 15px;
             text-decoration: none;
+            font-weight: bold;
+            transition: color 0.3s ease;
+        }
+        nav a:hover {
+            color: #3498db;
         }
         section {
-            padding: 20px;
-            margin-bottom: 60px;
+            padding: 40px;
+            margin-bottom: 80px;
+            max-width: 1000px;
+            width: 90%;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(0,0,0,0.1);
         }
         footer {
-            background: #333;
+            background: linear-gradient(135deg, #2c3e50, #34495e);
             color: #fff;
             text-align: center;
-            padding: 10px 0;
+            padding: 15px 0;
             position: fixed;
             width: 100%;
             bottom: 0;
+            box-shadow: 0 -2px 5px rgba(0,0,0,0.1);
         }
         .authors-grid {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            gap: 15px;
+            gap: 30px;
         }
         .author {
             text-align: center;
-            width: calc(20% - 12px);
-            margin-bottom: 20px;
+            width: calc(20% - 24px);
+            margin-bottom: 30px;
+            transition: transform 0.3s ease;
+        }
+        .author:hover {
+            transform: translateY(-5px);
         }
         .author-image {
-            width: 100px;
-            height: 100px;
+            width: 120px;
+            height: 120px;
             border-radius: 50%;
             object-fit: cover;
-            margin-bottom: 10px;
+            margin-bottom: 15px;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
         }
         .author-name {
-            margin-top: 5px;
-            font-size: 14px;
+            margin-top: 10px;
+            font-size: 16px;
         }
         .author-name a {
-            color: #333;
+            color: #2c3e50;
             text-decoration: none;
             font-weight: bold;
+            transition: color 0.3s ease;
         }
         .author-name a:hover {
-            text-decoration: underline;
+            color: #3498db;
         }
         @media (max-width: 1200px) {
             .author {
-                width: calc(25% - 11.25px);
+                width: calc(25% - 22.5px);
             }
         }
         @media (max-width: 992px) {
             .author {
-                width: calc(33.33% - 10px);
+                width: calc(33.33% - 20px);
             }
         }
         @media (max-width: 768px) {
             .author {
-                width: calc(50% - 7.5px);
+                width: calc(50% - 15px);
             }
         }
         @media (max-width: 480px) {
