--- a/news.html
+++ b/news.html
@@ -99,6 +99,13 @@
     <h2>Recent News</h2>
     
     <div class="update">
+        <p class="update-date">2024-08-25</p>
+        <div class="update-content">
+            <p>We are excited to announce that our paper "A Survey of Text Watermarking in the Era of Large Language Models" has been accepted by ACM Computing Surveys. We would like to thank all the reviewers and editors for their valuable feedback and support.</p>
+        </div>
+    </div>
+
+    <div class="update">
         <p class="update-date">2024-08-02</p>
         <div class="update-content">
             <ul>
