--- a/people.html
+++ b/people.html
@@ -154,7 +154,7 @@
             <div class="author-name"><a href="https://scholar.google.com/citations?user=op6xj6oAAAAJ&hl=en">Jingjing Li</a></div>
         </div>
         <div class="author">
-            <img src="images/xuming.jpg" alt="Xuming Hu" class="author-image">
+            <img src="images/xuminghu.jpeg" alt="Xuming Hu" class="author-image">
             <div class="author-name"><a href="https://xuminghu.github.io/">Xuming Hu</a></div>
         </div>
         <div class="author">
