--- a/index.html
+++ b/index.html
@@ -174,6 +174,15 @@
         li {
             margin-bottom: 10px;
         }
+        a {
+            color: #3498db;
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+        a:hover {
+            color: #2980b9;
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -282,6 +291,8 @@
         </div>
     </div>
     </div>
+
+    <p>If you want to experience various watermarking algorithms in practice, you can visit the <a href="https://github.com/thunlp/MarkLLM" target="_blank">MarkLLM Project</a>.</p>
     
     <div class="citation">
         <p>If you find our survey helpful, please cite it in your publications by clicking the Copy button below.</p>
