--- a/materials.html
+++ b/materials.html
@@ -217,9 +217,8 @@
             <li><a href="https://arxiv.org/pdf/2312.17295">Optimizing watermarks for large language models.</a></li>
             <li><a href="https://arxiv.org/pdf/2311.09832">WatME: Towards Lossless Watermarking Through Lexical Redundancy.</a></li>
             <li><a href="https://arxiv.org/pdf/2405.08400">Stylometric Watermarks for Large Language Models. (Future)</a></li>
-            <li><a href="https://arxiv.org/pdf/2404.02138">STopic-Based Watermarks for LLM-Generated Text. (Future)</a></li>
+            <li><a href="https://arxiv.org/pdf/2404.02138">Topic-Based Watermarks for LLM-Generated Text. (Future)</a></li>
             <li><a href="https://arxiv.org/pdf/2406.02603">Distortion-free Watermarks are not Truly Distortion-free under Watermark Key Collisions. (Future)</a></li>
-            <li><a href="https://arxiv.org/pdf/2403.17983">Is Watermarking LLM-Generated Code Robust? (Future)</a></li>
             <li><a href="https://openreview.net/pdf?id=6FXotcWvO2">A Nested Watermark for Large Language Models. (Future)</a></li>
             <li><a href="https://openreview.net/forum?id=JmNvS3Z4RF">Balanced Watermark: A Simple High-Imperceptibility Watermark for Large Language Models. (Future)</a></li>
             <li><a href="https://arxiv.org/abs/2310.00833">Necessary and Sufficient Watermark for Large Language Models. (Future)</a></li>
@@ -258,6 +257,7 @@
     <div class="section-content">
         <ul>
             <li><a href="https://arxiv.org/pdf/2402.14007">Can watermarks survive translation? on the cross-lingual consistency of text watermark for large language models.</a></li>
+            <li><a href="https://arxiv.org/pdf/2403.17983">Is Watermarking LLM-Generated Code Robust?</a></li>
             <li><a href="https://arxiv.org/pdf/2403.10020">Lost in Overlap: Exploring Watermark Collision in LLMs.</a></li>
             <li><a href="https://arxiv.org/pdf/2303.11156">Can AI-Generated Text be Reliably Detected?</a></li>
             <li><a href="https://arxiv.org/pdf/2403.14719">Bypassing LLM Watermarks with Color-Aware Substitutions.</a></li>
