--- a/materials.html
+++ b/materials.html
@@ -225,9 +225,10 @@
             <li><a href="https://arxiv.org/pdf/2408.01354">MCGMark: An Encodable and Robust Online Watermark for LLM-Generated Malicious Code. (Future)</a></li>
             <li><a href="https://arxiv.org/pdf/2407.13803">Less is More: Sparse Watermarking in LLMs with Enhanced Text Quality. (Future)</a></li>
             <li><a href="https://arxiv.org/pdf/2405.11109">Watermarking Language Models for Many Adaptive Users. (Future)</a></li>
+            <li><a href="https://arxiv.org/pdf/2402.12948">GumbelSoft: Diversified Language Model  Watermarking via the GumbelMax-trick (Future)</a></li>
         </ul>
         
-        <h4>Watermarking during Token Sampling</h4>
+        <h4>Watermarking during Sampling</h4>
         <ul>
             <li><a href="https://arxiv.org/pdf/2306.09194">Undetectable watermarks for language models.</a></li>
             <li><a href="https://www.scottaaronson.com/talks/watermark.ppt">Watermarking GPT outputs.</a></li>
@@ -238,6 +239,7 @@
             <li><a href="https://arxiv.org/pdf/2406.01946">Bileve: Securing Text Provenance in Large Language Models Against Spoofing with Bi-level Signature. (Future)</a></li>
             <li><a href="https://arxiv.org/pdf/2406.02633">Edit Distance Robust Watermarks for Language Models. (Future)</a></li>
             <li><a href="https://arxiv.org/pdf/2404.01245">A Statistical Framework of Watermarks for Large Language Models: Pivot, Detection Efficiency and Optimal Rules. (Future)</a></li>
+            <li><a href="https://arxiv.org/pdf/2410.02099">A Watermark for Black-Box Language Models. (Future)</a></li>
         </ul>
         
         <h4>Watermarking during LLM Training</h4>
@@ -267,6 +269,10 @@
             <li><a href="https://arxiv.org/pdf/2312.04469">On the Learnability of Watermarks for Language Models.</a></li>
             <li><a href="https://arxiv.org/pdf/2402.16187">No Free Lunch in LLM Watermarking: Trade-offs in Watermarking Design Choices. (Future)</a></li>
             <li><a href="https://arxiv.org/pdf/2407.14206">Watermark Smoothing Attacks against Language Models. (Future)</a></li>
+            <li><a href="https://arxiv.org/pdf/2410.02693">Discovering Clues of Spoofed LM Watermarks (Future)</a></li>
+            <li><a href="https://arxiv.org/pdf/2410.02440">Optimizing Adaptive Attacks against Content Watermarks for Language Models (Future)</a></li>
+            <li><a href="https://arxiv.org/pdf/2410.03168">Can Watermarked LLMs be Identified by Users via Crafted Prompts? (Future)</a></li>
+            <li><a href="https://arxiv.org/pdf/2410.03168">Black-Box Detection of Language Model Watermarks (Future)</a></li>
         </ul>
     </div>
 
